--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist ",
+    "build:href": "ng build --base-href ./",
+    "delete:docs": "del docs",
+    "copy:dist": "copyfiles dist/login-my-app/browser/* ./docs -f",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
