--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.0",
     "tslib": "^2.3.0",
+    "tw-elements": "^2.0.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -32,12 +33,15 @@
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "typescript": "~5.5.2"
   }
 }
